Added image to post

--- a/templates/views/post.hbs
+++ b/templates/views/post.hbs
@@ -12,6 +12,7 @@
 					</h5>
 				</header>
 				<div class="post">
+				<img src="{{data.post.image.url}}" class="img-responsive" alt="">
 					{{{data.post.content.extended}}}
 				</div>
 			</article>
