--- a/templates/views/post.hbs
+++ b/templates/views/post.hbs
@@ -5,7 +5,7 @@
 				<p><a href="/blog">&larr; back to the blog</a></p>
 				<hr>
 				<header>
-					<h1>{{data.post.title}}</h1>
+					<h1>{{data.post.title}}{{#if data.post.subtitle}} <small>{{data.post.subtitle}}</small>{{/if}}</h1>
 					<h5>
 						{{{categoryList data.post.categories prefix="Posted in "}}}
 						{{#if author.name.first}}by {{author.name.first}}{{/if}}
