Added images to blog posts

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -14,3 +14,15 @@
     max-width: 100%;
     height: auto;
 }
+
+.post{
+	margin-bottom: @line-height-computed;
+	&:last-child{
+		margin-bottom: 0;
+	}
+}
+article{
+	img{
+		margin-bottom: @line-height-computed;
+	}
+}
