--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -7,24 +7,24 @@
 		<title>Test Keystone</title>
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 		<link href="/styles/site.min.css" rel="stylesheet">
-		
-		{{!-- This file provides the default styling for the KeystoneJS Content Editor 
+
+		{{!-- This file provides the default styling for the KeystoneJS Content Editor
 			- only renders when user is logged in and admin--}}
 		{{{isAdminEditorCSS user}}}
-		
+
 		{{!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
 		//- Safely remove this block if you are not targeting IE8 --}}
 		<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js" />
 			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js" />
 		<![endif]-->
-		
+
 	</head>
 	<body>
 		<div id="header">
-			<div class="container">
-				<div role="navigation" class="navbar navbar-default">
-					<div class="container-fluid">
+			{{!-- <div class="container"> --}}
+				<div role="navigation" class="navbar navbar-default navbar-static-top">
+					<div class="container">
 						<div class="navbar-header">
 							<button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle">
 								<span class="sr-only">Toggle navigation</span>
@@ -49,7 +49,7 @@
 							</ul>
 						</div>
 					</div>
-				</div>
+				{{!-- </div> --}}
 			</div>
 		</div>
 		<div id="body">
