--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,21 +1,49 @@
 {{!< default}}
-<div class="container">
-	<div class="jumbotron"><img src="/images/logo.svg" width="160" class="pull-right">
-		<h1>Welcome</h1>
-		<p>This is your new <a href='http://keystonejs.com', target='_blank'>KeystoneJS</a> website.</p>
-		<p>
-			It includes the latest versions of
-			<a href='http://getbootstrap.com/' target='_blank'>Bootstrap</a>
-			and <a href='http://www.jquery.com/' target='_blank'>jQuery</a>.
-		</p>
-		<p>Visit the <a href='http://keystonejs.com/guide' target='_blank'>Getting Started</a> guide to learn how to customise it.</p>
-		<hr>
-		<p>We have created a default Admin user for you with the email <strong>user@keystonejs.com</strong> and the password <strong>admin</strong>.</p>
-		<p><a href="/keystone/signin" style="margin-right: 10px" class="btn btn-lg btn-primary">Sign in</a> to use the Admin UI.</p>
-		<hr>
-		<p>
-			Remember to <a href='https://github.com/keystonejs/keystone' target='_blank'>Star KeystoneJS on GitHub</a> and
-			<a href='https://twitter.com/keystonejs' target='_blank'>follow @keystonejs</a> on twitter for updates.
-		</p>
+<div id="head-carousel" class="carousel slide" data-ride="carousel" data-wrap="true" data-interval="3000">
+	<ol class="carousel-indicators">
+		{{# each data.posts.results}}
+		<li data-target="#head-carousel" data-slide-to="{{@index}}" {{#if @first }}class="active"{{/if}}></li>
+		{{/each}}
+	</ol>
+	<!-- Indicators -->
+	<div class="carousel-inner" role="listbox">
+		{{# each data.posts.results}}
+		<div class="item {{#if @first }}active{{/if}}">
+			<a href="{{postUrl slug}}"><img src="{{cloudinaryUrl image width="1024" height="400" }}">
+			</a>
+			<div class="carousel-caption">
+				<h2>{{{title}}}</h2>
+				{{#if content.brief }}<p>{{{content.brief}}}</p>{{/if}}
+			</div>
+		</div>
+		{{/each}}
 	</div>
+{{!-- 	<!-- Controls -->
+	<a class="left carousel-control" href="#head-carousel" role="button" data-slide="prev">
+		<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+		<span class="sr-only">Previous</span>
+	</a>
+	<a class="right carousel-control" href="#head-carousel" role="button" data-slide="next">
+		<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+		<span class="sr-only">Next</span>
+	</a> --}}
+</div>
+<div class="container">
+	<img src="/images/logo.svg" width="160" class="pull-right">
+	<h1>Welcome?</h1>
+	<p>This is your new <a href='http://keystonejs.com', target='_blank'>KeystoneJS</a> website.</p>
+	<p>
+		It includes the latest versions of
+		<a href='http://getbootstrap.com/' target='_blank'>Bootstrap</a>
+		and <a href='http://www.jquery.com/' target='_blank'>jQuery</a>.
+	</p>
+	<p>Visit the <a href='http://keystonejs.com/guide' target='_blank'>Getting Started</a> guide to learn how to customise it.</p>
+	<hr>
+	<p>We have created a default Admin user for you with the email <strong>user@keystonejs.com</strong> and the password <strong>admin</strong>.</p>
+	<p><a href="/keystone/signin" style="margin-right: 10px" class="btn btn-lg btn-primary">Sign in</a> to use the Admin UI.</p>
+	<hr>
+	<p>
+		Remember to <a href='https://github.com/keystonejs/keystone' target='_blank'>Star KeystoneJS on GitHub</a> and
+		<a href='https://twitter.com/keystonejs' target='_blank'>follow @keystonejs</a> on twitter for updates.
+	</p>
 </div>
