--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -9,11 +9,11 @@
 	<div class="carousel-inner" role="listbox">
 		{{# each data.posts.results}}
 		<div class="item {{#if @first }}active{{/if}}">
-			<a href="{{postUrl slug}}"><img src="{{cloudinaryUrl image width="1024" height="400" }}">
+			<a href="{{postUrl slug}}"><img src="{{cloudinaryUrl image width="1024" height="400" crop="fill" gravity="north"}}">
 			</a>
 			<div class="carousel-caption">
 				<h2>{{{title}}}</h2>
-				{{#if content.brief }}<p>{{{content.brief}}}</p>{{/if}}
+				{{#if content.brief }}<p class="hidden-xs">{{content.brief}}</p>{{/if}}
 			</div>
 		</div>
 		{{/each}}
