--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,12 +13,15 @@
 			</a>
 			<div class="carousel-caption">
 				<h2>{{{title}}}</h2>
-				{{#if content.brief }}<p class="hidden-xs">{{content.brief}}</p>{{/if}}
+				<p class="hidden-xs">
+					{{content.brief}}
+					<a href="{{postUrl slug}}">...läs mer</a>
+				</p>
 			</div>
 		</div>
 		{{/each}}
 	</div>
-{{!-- 	<!-- Controls -->
+	<!-- Controls -->
 	<a class="left carousel-control" href="#head-carousel" role="button" data-slide="prev">
 		<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 		<span class="sr-only">Previous</span>
@@ -26,7 +29,7 @@
 	<a class="right carousel-control" href="#head-carousel" role="button" data-slide="next">
 		<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 		<span class="sr-only">Next</span>
-	</a> --}}
+	</a>
 </div>
 <div class="container">
 	<img src="/images/logo.svg" width="160" class="pull-right">
