--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -21,7 +21,7 @@
 
 	</head>
 	<body>
-		<div id="header">
+		<div id="header"{{#ifeq section 'home'}} class="header-first"{{/ifeq}}>
 			{{!-- <div class="container"> --}}
 				<div role="navigation" class="navbar navbar-default navbar-static-top">
 					<div class="container">
@@ -30,7 +30,7 @@
 								<span class="sr-only">Toggle navigation</span>
 								<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
-							<a href="/" class="navbar-brand">Test Keystone</a>
+							<a href="/" class="navbar-brand">Stratum<sup>3</sup></a>
 						</div>
 						<div class="collapse navbar-collapse">
 							<ul class="nav navbar-nav navbar-left">
@@ -42,6 +42,7 @@
 							</ul>
 							<ul class="nav navbar-nav navbar-right">
 								{{#if user}}
+								<li><a href="#" class="user"><img src="{{#if user.image.url}}{{cloudinaryUrl user.image width="27" height="27" crop="fill"}}{{else}}/images/avatar.png{{/if}}" alt="" width="27" class="img-circle"></a></li>
 								<li><a href="/keystone/signout">Sign Out</a></li>
 								{{else}}
 								<li><a href="/keystone/signin">Sign In</a></li>
