--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -35,8 +35,17 @@
 						<div class="collapse navbar-collapse">
 							<ul class="nav navbar-nav navbar-left">
 									{{# each navLinks}}
-									<li {{#ifeq ../section key}}class="active"{{else}}{{/ifeq}}>
+									<li class="{{#ifeq ../section key}}active {{else}}{{/ifeq}}{{#if isSubmenu}}dropdown{{else}}{{/if}}">
+										{{#if isSubmenu}}
+								          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ label }} <span class="caret"></span></a>
+								          <ul class="dropdown-menu" role="menu">
+											{{#each href}}
+								            <li><a href="{{ href }}">{{label}}</a></li>
+								            {{/each}}
+								          </ul>
+										{{else}}
 										<a href="{{ href }}">{{ label }}</a>
+										{{/if}}
 									</li>
 								{{/each}}
 							</ul>
