--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -97,10 +97,11 @@
 		<div class="container">
 			<div id="footer">
 			{{#if lastCommit}}
-			{{#with lastCommit}}
+			{{#with lastCommit.commit}}
 				<div id="dev-info" style="float: right; text-align: right; margin-bottom: 10px;">
-					latest commit <a href="{{html_url}}">{{shortenString sha 10}}</a><br/>
-					<img src="{{author.avatar_url}}&s=40" width="20" height="20" class="img-rounded"> <a href="{{author.html_url}}">{{author.login}}</a> authored {{date commit.author.date timeago=true}}
+					<img src="{{author.avatar_url}}&s=40" width="20" height="20" class="img-rounded"> <a target="_blank" href="{{author.html_url}}">{{author.login}}</a> authored {{date commit.author.date timeago=true}}</br>
+					branch {{/with}}<a target="_blank" href="{{lastCommit._links.html}}">{{lastCommit.name}}</a>, 
+					{{#with lastCommit.commit}}latest commit <a target="_blank" href="{{html_url}}">{{shortenString sha 10}}</a><br/>
 				</div>
 			{{/with}}
 			{{/if}}
