--- a/templates/views/contentpage.hbs
+++ b/templates/views/contentpage.hbs
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-		{{!-- <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2"> --}}
+		<div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 			{{#with data.contentpage}}
 			<article>
 				<header>
@@ -10,13 +10,13 @@
 						{{#if author.name.first}}by {{author.name.first}}{{/if}}
 					</h5>
 				</header>
-				<img src="{{cloudinaryUrl image}}" class="img-responsive">
+				<img src="{{cloudinaryUrl image width="750" crop="fill"}}" class="img-responsive">
 				{{!-- {{#if image.url }}<img src="{{image.url}}" alt="" class="img-responsive">{{/if}} --}}
 				<div class="post">
 					{{{content.extended}}}
 				</div>
 			</article>
 			{{/with}}
-		{{!-- </div> --}}
+		</div>
 	</div>
 </div>
