--- a/templates/views/news.hbs
+++ b/templates/views/news.hbs
@@ -9,12 +9,12 @@
 				{{# each data.news.results}}
 				<div data-ks-editable="{{#if ../user}}{{adminEditableUrl ../../user _id}}{{/if}}" class="post clearfix">
 					<img src="{{cloudinaryUrl image width=200 height=200 crop='fill' gravity='north'}}" class="img-circle pull-right">
-					<h2><a href="{{postUrl slug}}">{{{title}}}</a></h2>
+					<h2><a href="{{newsUrl slug}}">{{{title}}}</a></h2>
 					<p class="lead text-muted">{{{categoryList categories prefix="Posted in "}}}
 							{{#if author.name.first}}by {{author.name.first}}{{/if}}
 					</p>
 					<p>{{{content.extended}}}</p>
-					<p class="read-more"><a href="{{postUrl slug}}">Read more...</a></p>
+					<p class="read-more"><a href="{{newsUrl slug}}">Read more...</a></p>
 				</div>
 				{{/each}}
 			</div>
