Added less-variables, util mixins
All colors are now defined in site specific less. Added a size mixin
(probably change name) which sets padding, line-height, border-radius
according to bootstrap globals.

--- a/public/styles/site/variables.less
+++ b/public/styles/site/variables.less
@@ -2,3 +2,15 @@
 
 @font-size-base: 14px;
 @font-family-sans-serif:  "OpenSansLight", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+@brand-primary:         #428bca; //currently not overridden...
+@brand-success:         #5cb85c; //currently not overridden...
+@brand-info:            #5bc0de; //currently not overridden...
+@brand-warning:         #f0ad4e; //currently not overridden...
+@brand-danger:          #d9534f; //currently not overridden...
+
+@gutter: 10px;
+@gutter-large: floor(@gutter * 1.5);
+
+@primary-light: lighten(@brand-primary, 20%);
+@primary-lighter: lighten(@brand-primary, 30%);
