Added single news item view and a news roll
Component for viewing a single news item is now added and routed as well
as a listing of recent news items to the main page.

--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -32,3 +32,5 @@
 
 // Add your own site style includes here
 @import "site/layout.less";
+@import "site/news-roll.less";
+@import "site/news-item.less";
