--- a/templates/views/contentpage.hbs
+++ b/templates/views/contentpage.hbs
@@ -13,7 +13,7 @@
 				<img src="{{cloudinaryUrl image width="750" crop="fill"}}" class="img-responsive">
 				{{!-- {{#if image.url }}<img src="{{image.url}}" alt="" class="img-responsive">{{/if}} --}}
 				<div class="post">
-					<div class="well">
+					<div class="markdown-content well">
 						<span style="text-transform: uppercase; font-weight: bold; font-size: 12px; float: right;">Markdown</span>
 						{{#if content.markdown.html}}
 							{{{content.markdown.html}}}
